2007-11-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/statistics/DefaultMultiValueCategoryDataset.java
	(getValues): Return EMPTY_LIST rather than null.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/TimeSeries.java
	(TimeSeries(String)): Changed first argument to Comparable,
	(TimeSeries(String, Class)): Likewise,
	(TimeSeries(String, String, String, Class)): Likewise.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
	
	* source/org/jfree/chart/plot/XYPlot.java
	(setFixedDomainAxisSpace): Fire change event,
	(setFixedRangeAxisSpace): Likewise.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1823724 by Richard West:
	* source/org/jfree/chart/renderer/xy/XYDifferenceRenderer.java
	(drawItemPass1): Add code to draw item labels.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1823697 by Richard West:
	* source/org/jfree/chart/plot/XYPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.
	
2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1823697 by Richard West:
	* source/org/jfree/chart/plot/CategoryPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.

2007-10-31  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/DefaultKeyedValues.java
	(data): Removed,
	(keys): New field,
	(values): Likewise,
	(indexMap): New field,
	(DefaultKeyedValues): Initialise new fields,
	(getItemCount): Use new data fields,